--- a/.babelrc
+++ b/.babelrc
@@ -3,10 +3,10 @@
         [
             "@babel/preset-env",
             {
-            "useBuiltIns": "entry"
+                "useBuiltIns": "entry"
             }
         ],
-        ["@babel/preset-react"]
+        "@babel/preset-react"
     ],
     "plugins": [
         [
@@ -14,6 +14,7 @@
             {
                 "loose": true
             }
-        ]
+        ],
+        "@babel/plugin-transform-runtime"
     ]
 }
