--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "worm",
     "neural",
     "network",
+    "genetic",
+    "evolution",
     "neuroevolution"
   ],
   "author": "Jussi Mullo <mulloju@gmail.com>",
@@ -27,6 +29,7 @@
   "devDependencies": {
     "@babel/core": "7.1.5",
     "@babel/plugin-proposal-class-properties": "7.1.0",
+    "@babel/plugin-transform-runtime": "7.1.0",
     "@babel/preset-env": "7.1.5",
     "@babel/preset-react": "7.0.0",
     "autoprefixer": "9.3.1",
@@ -43,10 +46,11 @@
     "webpack-dev-server": "3.1.10"
   },
   "dependencies": {
-    "@babel/polyfill": "7.0.0",
+    "@babel/runtime": "7.1.5",
     "@material-ui/core": "3.5.1",
     "@material-ui/lab": "3.0.0-alpha.23",
     "lodash": "4.17.11",
+    "neataptic": "1.4.7",
     "react": "16.6.1",
     "react-dom": "16.6.1",
     "typeface-roboto": "0.0.54"
