--- a/package.json
+++ b/package.json
@@ -27,32 +27,33 @@
   },
   "homepage": "https://github.com/jmullo/neuro-worm",
   "devDependencies": {
-    "@babel/core": "7.1.5",
-    "@babel/plugin-proposal-class-properties": "7.1.0",
-    "@babel/plugin-transform-runtime": "7.1.0",
-    "@babel/preset-env": "7.1.5",
+    "@babel/core": "7.2.0",
+    "@babel/plugin-proposal-class-properties": "7.2.1",
+    "@babel/plugin-transform-runtime": "7.2.0",
+    "@babel/preset-env": "7.2.0",
     "@babel/preset-react": "7.0.0",
-    "autoprefixer": "9.3.1",
+    "autoprefixer": "9.4.2",
     "babel-loader": "8.0.4",
     "clean-webpack-plugin": "1.0.0",
-    "css-loader": "1.0.1",
+    "css-loader": "2.0.0",
     "file-loader": "2.0.0",
     "html-webpack-plugin": "3.2.0",
     "postcss-loader": "3.0.0",
     "style-loader": "0.23.1",
     "url-loader": "1.1.2",
-    "webpack": "4.25.1",
+    "webpack": "4.27.1",
     "webpack-cli": "3.1.2",
     "webpack-dev-server": "3.1.10"
   },
   "dependencies": {
-    "@babel/runtime": "7.1.5",
-    "@material-ui/core": "3.5.1",
-    "@material-ui/lab": "3.0.0-alpha.23",
+    "@babel/runtime": "7.2.0",
+    "@material-ui/core": "3.6.2",
+    "@material-ui/lab": "3.0.0-alpha.25",
     "lodash": "4.17.11",
     "neataptic": "1.4.7",
-    "react": "16.6.1",
-    "react-dom": "16.6.1",
+    "react": "16.6.3",
+    "react-dom": "16.6.3",
+    "react-vis": "1.11.5",
     "typeface-roboto": "0.0.54"
   }
 }
